--- a/config.env
+++ b/config.env
@@ -3,3 +3,5 @@ PORT=4000
 CONN_STR=mongodb+srv://admin1:6Omqg9PX6Sy76cuh@cluster0.yvgdcuk.mongodb.net/ExpenseTracker?retryWrites=true&w=majority
 DB_USER=admin1
 DB_PASSWORD=6Omqg9PX6Sy76cuh
+SECRETE_STR='jwxv67-ghi532-acbghr-68rtpq-huxeeyh7'
+LOGIN_EXPIRES=10000000
